# k8s-datamodel

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CRD_EXPORT_EXAMPLES.md  PROJECT_SUMMARY.md  README.md  debug_cli_flow.py  debug_crd.py  debug_datetime.py  index.html  mkdocs.yml  olm-test.json  pyproject.toml  sample-inventory.json  sitemap.xml  test_crd_inventory.py  verify_datetime_fix.py
CRD_EXPORT_EXAMPLES/: index.html
OLM_FEATURE_SUMMARY/: index.html
PROJECT_SUMMARY/: index.html
RELEASE_NOTES/: index.html
api/cli/: index.html
api/core/: index.html
changelog/: index.html
contributing/: index.html
docs/: CRD_EXPORT_EXAMPLES.md  OLM_FEATURE_SUMMARY.md  PROJECT_SUMMARY.md  RELEASE_NOTES.md  contributing.md  examples.md  index.md
docs/api/: cli.md  core.md
docs/examples/: database-workflows.md  olm-workflows.md  security-compliance.md
docs/usage/: cluster.md  crds.md  database.md  operators.md  output-formats.md  quick-start.md
examples/: index.html
examples-reports/: my-export_aaq_kubevirt_io.md  my-export_acme_cert-manager_io.md  my-export_addons_kubestash_com.md  my-export_appcatalog_appscode_com.md  my-export_apps_k8s_appscode_com.md  my-export_archiver_kubedb_com.md  my-export_argoproj_io.md  my-export_authn_krateo_io.md  my-export_autoscaling_kubedb_com.md  my-export_basic_authn_krateo_io.md  my-export_catalog_appscode_com.md  my-export_catalog_kubedb_com.md  my-export_cdi_kubevirt_io.md  my-export_cert-manager_io.md  my-export_clone_kubevirt_io.md  my-export_composition_krateo_io.md  my-export_core_krateo_io.md  my-export_core_strimzi_io.md  my-export_database_oracle_com.md  my-export_deployment_krateo_io.md  my-export_elasticsearch_kubedb_com.md  my-export_eventrouter_krateo_io.md  my-export_export_kubevirt_io.md  my-export_forklift_cdi_kubevirt_io.md  my-export_gateway_networking_k8s_io.md  my-export_git_krateo_io.md  my-export_github_kog_krateo_io.md  my-export_hco_kubevirt_io.md  my-export_helm_cattle_io.md  my-export_helm_mariadb_mmontes_io.md  my-export_hostpathprovisioner_kubevirt_io.md  my-export_hub_traefik_io.md  my-export_instancetype_kubevirt_io.md  my-export_k3s_cattle_io.md  my-export_k8s_cni_cncf_io.md  my-export_k8s_mariadb_com.md  my-export_kafka_kubedb_com.md  my-export_kafka_strimzi_io.md  my-export_krateo_io.md  my-export_kubedb_com.md  (+24 more)
examples/database-workflows/: index.html
examples/olm-workflows/: index.html
examples/security-compliance/: index.html
exports/: README.md
scripts/: demo.sh
search/: search_index.json
src/k8s_inventory_cli/: __init__.py  main.py
src/k8s_inventory_cli/commands/: __init__.py  cluster.py  crd.py  database.py  olm.py  operators.py
src/k8s_inventory_cli/core/: __init__.py  crd_inventory.py  database.py  k8s_client.py  models.py  olm_inventory.py  operator_inventory.py
src/k8s_inventory_cli/utils/: __init__.py  formatters.py
stylesheets/: extra.css
tests/: __init__.py  test_crd_group_synthesis.py  test_crd_inventory.py  test_database.py  test_database_commands.py  test_formatters.py  test_mermaid_diagrams.py  test_olm_inventory.py
usage/cluster/: index.html
usage/crds/: index.html
usage/database/: index.html
usage/operators/: index.html
usage/output-formats/: index.html
usage/quick-start/: index.html
